split the kids page

--- a/html/Kids/ProgramsForGroups.html
+++ b/html/Kids/ProgramsForGroups.html
@@ -144,10 +144,10 @@
 
     <ul class="nav nav-fill nav-pills bg-primary" id="pills-tab">
       <li class="nav-item">
-        <a class="nav-link text-white active rounded-0 shake" id="pills-youth-tab" href="../Kids/Kids_Landing.html">BUGSS Kids Home</a>
+        <a class="nav-link text-white rounded-0 shake" id="pills-youth-tab" href="../Kids/Kids_Landing.html">BUGSS Kids Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white rounded-0 shake" id="pills-clubs-tab" href="ProgramsForGroups.html">Programs for Clubs and Groups</a>
+        <a class="nav-link text-white active rounded-0 shake" id="pills-clubs-tab" href="ProgramsForGroups.html">Programs for Clubs and Groups</a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-white rounded-0 shake" id="pills-igem-tab" href="iGEM.html">Baltimore BioCrew iGEM Team</a>
@@ -167,98 +167,126 @@
       </div>
     </div>
 
-    <div class="container-fluid bg-white my-5">
-      <div class="row">
-        <div class="col mb-3">
-          <div class="card border-white shadow h-100">
-            <div class="card-header bg-white">
-              <h3 class="card-title text-center">For Younger Kids</h3>
+    <div class="container-fluid bg-white" id="pills-tabContent">
+      <!--Clubs and Groups Tab-->
+        <h1 class="display-4">Programs for Clubs and Groups</h1>
+        <div class="container-fluid row">
+          <div class="col-12">
+            <h1 class="text-primary">Offerings for Elementary School and up!</h1>
+            <div class="row justify-content-center">
+              <!--CARD 1-->
+              <div class="col-12 col-sm-6 col-md col-lg-3 mb-4">
+                <div class="card shadow border-primary h-100">
+                  <img src="../../media/ACTG_Fruit.jpg" class="card-img-top" alt="image of DNA">
+                  <div class="card-body align-items-start">
+                    <h4 class="card-title text-primary">The A C T G's of Fruit!</h4>
+                    <h5 class="card-subtitle mb-2">1.5 hour course</h5>
+                    <p class="card-text">
+                      What is DNA? What is a gene? We’ll learn by using chemistry to extract DNA from several fruits. Can you guess the number of chromosomes in each based on the amount of DNA?
+                    </p>
+                  </div>
+                </div>
+              </div>
 
-              <img class="img-fluid rounded my-1" src="../../media/Margia 2_CropEdit.png" alt="Baltimore BioCrew group picture ">
-              <h3 class="card-title text-primary text-center mt-3 mb-2">Agar Art</h3>
+              <div class="col-12 col-sm-6 col-md col-lg-3 mb-4">
+                <div class="card shadow border-primary h-100">
+                  <img src="../../media/IYC-messy winogradsky station_CROP.jpg" class="card-img-top" alt="image of DNA">
+                  <div class="card-body align-items-start">
+                    <h4 class="card-title text-primary">Grow an Ecosystem!</h4>
+                    <h5 class="card-subtitle mb-2">1.5 hour course</h5>
+                    <p class="card-text">
+                      Winogradsky columns allow you to grow your own ecosystem and learn how different soil bacteria use different nutrients to live. Come learn about soil ecosystems and create a long-term experiment to go home with!
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-md col-lg-3 mb-4">
+                <div class="card shadow border-primary h-100">
+                  <img src="../../media/Margia 2_CropEdit.png" class="card-img-top" alt="image of DNA">
+                  <div class="card-body align-items-start">
+                    <h4 class="card-title text-primary">Agar Art!</h4>
+                    <h5 class="card-subtitle mb-2">1 hour course</h5>
+                    <p class="card-text">
+                      Use colored bacteria and yeast to create your own living art works by drawing with colored organisms on petri dishes.</p>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="card-body">
-              <h5 class="card-subtitle mb-2 text-center">1 hour class</h5>
-              <p class="card-text">
-                Use colored bacteria and yeast to create your own living art works by drawing with colored organisms on petri dishes.</p>
-              </p>
+          </div>
+          <div class="col-12 col-lg-6">
+            <h1 class="text-primary">Offerings for Middle School and up!</h1>
+            <div class="row justify-content-center">
+              <!--CARD 1-->
+              <div class="col-12 col-sm col-lg-6 mb-4">
+                <div class="card shadow border-primary ">
+                  <img src="../../media/BBa_J45200.png" class="card-img-top" alt="image of DNA">
+
+                  <div class="card-body align-items-start">
+                    <h4 class="card-title text-primary">Eau That Smell!</h4>
+                    <h5 class="card-subtitle mb-2">10 hour course</h5>
+                    <p class="card-text">
+                      In this lab, normally stinky smelling bacteria are made to smell sweet, like bananas. Four strains are compared for their banana smells. The activity teaches microbiology, genetics, and bioengineering.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-12 col-sm col-lg-6 mb-4">
+                <div class="card shadow border-primary h-100">
+                  <img src="../../media/Golden_Rice.jpg" class="card-img-top" alt="image of DNA">
+                  <div class="card-body align-items-start">
+                    <h4 class="card-title text-primary">Golden Rice</h4>
+                    <h5 class="card-subtitle mb-2">15 hour course</h5>
+                    <p class="card-text">
+                      Genetically-modified foods are sometimes described as life-saving approaches to malnutrition, and sometimes protested as unnatural and unsafe. In this series of labs, you will work with a genetically modified organism that can
+                      be
+                      used to bake breads containing a super-dose of Vitamin A. You will test the bright orange yeast for vitamin production and for the food quality.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-6">
+            <h1 class="text-primary">Offerings for High School and up!</h1>
+            <div class="row ">
+              <!--CARD 1-->
+              <div class="col-12 col-sm col-lg-6 mb-4">
+                <div class="card shadow border-primary h-100">
+                  <img src="../../media/Boot_Camp.jpg" class="card-img-top" alt="image of DNA">
+
+                  <div class="card-body align-items-start">
+                    <h4 class="card-title text-primary">Molecular Biotechnology Boot Camp</h4>
+                    <h5 class="card-subtitle mb-2">10 or 20 hour course</h5>
+                    <p class="card-text">
+                      Learn all the basics of DNA manipulation, including DNA plasmid isolation, restriction digest, PCR, gel electrophoresis, ligation, and transformation. With these skills, you’ll be ready to design your own experiments!
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-12 col-sm col-lg-6 mb-4">
+                <div class="card shadow border-primary h-100">
+                  <img src="../../media/ITuneDevice.png" class="card-img-top" alt="image of DNA">
+                  <div class="card-body align-items-start">
+                    <h4 class="card-title text-primary">iTUNE Device</h4>
+                    <h5 class="card-subtitle mb-2">4 hour course</h5>
+                    <p class="card-text">
+                      This lab focuses on predictable design. Students will examine the role of parts, such as promoters and ribosome binding sites, in determining the output of a genetic device. The students measure &#946;-galactosidase enzymatic
+                      activity as the device’s output, enabling them to look through the lens of molecular genetics to evaluate a device’s behavior.
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col mb-3">
-          <div class="card border-white shadow h-100 ">
-            <div class="card-header bg-white">
-              <h3 class="card-title text-center">For Big Kids</h3>
-              <img class="img-fluid rounded my-1" src="../../media/ACTG_Fruit.jpg" alt="Kids working with scientific tools in lab">
-              <h3 class="card-title text-primary text-center mt-2">The ACTG's of Fruit!</h3>
-            </div>
-            <div class="card-body">
-              <h5 class="card-subtitle mb-2 text-center">1.5 hour course</h5>
-              <p class="card-text mt-1">
-                What is DNA? What is a gene? We’ll learn by using chemistry to extract DNA from several fruits. Can you guess the number of chromosomes in each based on the amount of DNA?
-              </p>
-            </div>
-          </div>
-        </div>
 
-        <div class="col">
-          <div class="card border-white shadow h-100">
-            <div class="card-header bg-white">
-              <h3 class="card-title text-center">For Older Kids</h3>
-              <img class="img-fluid rounded my-1" src="../../media/ITuneDeviceSquare.png" alt="Kids working with scientific tools in lab">
-              <h3 class="card-title text-primary text-center mt-2">iTune Device </h3>
-            </div>
-            <div class="card-body">
-              <h5 class="card-subtitle mb-2 text-center">4 hour course</h5>
-              <p class="card-text">
-                This lab focuses on predictable design. Students will examine the role of parts, such as promoters and ribosome binding sites, in determining the output of a genetic device. The students measure &#946;-galactosidase enzymatic
-                activity as the device’s output, enabling them to look through the lens of molecular genetics to evaluate a device’s behavior.
-              </p>
-            </div>
-          </div>
-        </div>
-
-      </div>
     </div>
-    <div class="container-fluid">
-      <div class="card shadow my-4">
-        <div class="card-header">
-          <h4 class="card-title text-primary mt-3"> "BUGSS provides creative learning experiences, responsive to the interests of our community members." </h4>
-        </div>
-        <div class="card-body">
-          <p class="card-text">Neiyer Correal-Winters and his two sons Naige and Patrick read about groundbreaking CRISPR technology that allows rapid and efficient genome editing. Eager to try their hands with the technology, they obtained a
-            family
-            membership to BUGSS, ordered materials online, and developed their own CRISPR project under the guidance of lab staff and mentors. At the BUGSS lab, they are able to pursue this unique family activity!</p>
-        </div>
-      </div>
-      <div class="card shadow my-4">
-        <div class="card-header">
-          <h4 class="card-title text-primary mt-3"> "BUGSS motivates students with socially relevant science." </h4>
-        </div>
-        <div class="card-body">
-          <p class="card-text">Ella Coleman is a home schooled student who joined the BUGSS team for the International Genetically Engineered Machines competition (iGEM). The six high school students conceived of a project, engineering bacterial
-            cells
-            to
-            degrade plastic and help clean up pollution in the Inner Harbor. Ella traveled to Boston with the team, delivered oral and poster presentations at the International Jamboree of high school and college students, talked about her work
-            with
-            faculty judges, and won a team bronze medal. The team’s incredible work was recognized with an article and video of Ella on the front page of the Baltimore Sun!</p>
-        </div>
-      </div>
-      <div class="card shadow my-4">
-        <div class="card-header">
-          <h4 class="card-title text-primary mt-3"> "BUGSS inspires science and technology careers." </h4>
-        </div>
-        <div class="card-body">
-          <p class="card-text">Rachael Avidor, Julius Gingles, and Mercedes Thompson are three students from Baltimore city high schools who participated in BUGSS’ 2016 iGEM team. While these three students had long been interested in science, the
-            iGEM
-            experience was unique in allowing them to take leadership and ownership of a scientific project. Each is continuing to excel on their scientific path, engaging in additional research at Johns Hopkins and the NIH, winning full
-            scholarships
-            to Brown and Johns Hopkins Universities, and founding Baltimore Beyond Plastic. These students will lead the scientific revolution of the next generation!</p>
-        </div>
-      </div>
-    </div>
+
     <!--FOOTER Default BG/ACCENT TEXT-->
     <footer class="bg-black border-top mt-3">
+      <!-- Add font awesome icons -->
       <div class="row justify-content-around text-center mt-3">
         <div class="col text-secondary">
           Address: <br>
