--- a/html/Kids/AgarArt.html
+++ b/html/Kids/AgarArt.html
@@ -156,7 +156,6 @@
         <a class="nav-link text-white rounded-0 shake" id="pills-agar-tab" href="AgarArt.html">Agar Art</a>
       </li>
     </ul>
-
     <div class="container-fluid">
       <div class="my-2 jumbotron card bg-primary">
 
@@ -165,100 +164,21 @@
         <h5 class="text-white">And parents, check out our brochure on how to get invloved</h5>
         <a class="link-light" href="../../media/BUGSS-educational-brochure.pdf">Click Here For Our Educational Brochure</a>
       </div>
-    </div>
 
-    <div class="container-fluid bg-white my-5">
-      <div class="row">
-        <div class="col mb-3">
-          <div class="card border-white shadow h-100">
-            <div class="card-header bg-white">
-              <h3 class="card-title text-center">For Younger Kids</h3>
 
-              <img class="img-fluid rounded my-1" src="../../media/Margia 2_CropEdit.png" alt="Baltimore BioCrew group picture ">
-              <h3 class="card-title text-primary text-center mt-3 mb-2">Agar Art</h3>
-            </div>
-            <div class="card-body">
-              <h5 class="card-subtitle mb-2 text-center">1 hour class</h5>
-              <p class="card-text">
-                Use colored bacteria and yeast to create your own living art works by drawing with colored organisms on petri dishes.</p>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-3">
-          <div class="card border-white shadow h-100 ">
-            <div class="card-header bg-white">
-              <h3 class="card-title text-center">For Big Kids</h3>
-              <img class="img-fluid rounded my-1" src="../../media/ACTG_Fruit.jpg" alt="Kids working with scientific tools in lab">
-              <h3 class="card-title text-primary text-center mt-2">The ACTG's of Fruit!</h3>
-            </div>
-            <div class="card-body">
-              <h5 class="card-subtitle mb-2 text-center">1.5 hour course</h5>
-              <p class="card-text mt-1">
-                What is DNA? What is a gene? We’ll learn by using chemistry to extract DNA from several fruits. Can you guess the number of chromosomes in each based on the amount of DNA?
-              </p>
-            </div>
-          </div>
-        </div>
 
-        <div class="col">
-          <div class="card border-white shadow h-100">
-            <div class="card-header bg-white">
-              <h3 class="card-title text-center">For Older Kids</h3>
-              <img class="img-fluid rounded my-1" src="../../media/ITuneDeviceSquare.png" alt="Kids working with scientific tools in lab">
-              <h3 class="card-title text-primary text-center mt-2">iTune Device </h3>
-            </div>
-            <div class="card-body">
-              <h5 class="card-subtitle mb-2 text-center">4 hour course</h5>
-              <p class="card-text">
-                This lab focuses on predictable design. Students will examine the role of parts, such as promoters and ribosome binding sites, in determining the output of a genetic device. The students measure &#946;-galactosidase enzymatic
-                activity as the device’s output, enabling them to look through the lens of molecular genetics to evaluate a device’s behavior.
-              </p>
-            </div>
-          </div>
-        </div>
+      <!--Agar Art TAB-->
+      <div class="tab-pane fade" id="pills-agar" role="tabpanel" aria-labelledby="pills-agar-tab">
+        <h1 class="display-4"> Agar Art </h1>
+        <p class="container-fluid lead">
+          this page is under construction
+        </p>
 
-      </div>
-    </div>
-    <div class="container-fluid">
-      <div class="card shadow my-4">
-        <div class="card-header">
-          <h4 class="card-title text-primary mt-3"> "BUGSS provides creative learning experiences, responsive to the interests of our community members." </h4>
-        </div>
-        <div class="card-body">
-          <p class="card-text">Neiyer Correal-Winters and his two sons Naige and Patrick read about groundbreaking CRISPR technology that allows rapid and efficient genome editing. Eager to try their hands with the technology, they obtained a
-            family
-            membership to BUGSS, ordered materials online, and developed their own CRISPR project under the guidance of lab staff and mentors. At the BUGSS lab, they are able to pursue this unique family activity!</p>
-        </div>
-      </div>
-      <div class="card shadow my-4">
-        <div class="card-header">
-          <h4 class="card-title text-primary mt-3"> "BUGSS motivates students with socially relevant science." </h4>
-        </div>
-        <div class="card-body">
-          <p class="card-text">Ella Coleman is a home schooled student who joined the BUGSS team for the International Genetically Engineered Machines competition (iGEM). The six high school students conceived of a project, engineering bacterial
-            cells
-            to
-            degrade plastic and help clean up pollution in the Inner Harbor. Ella traveled to Boston with the team, delivered oral and poster presentations at the International Jamboree of high school and college students, talked about her work
-            with
-            faculty judges, and won a team bronze medal. The team’s incredible work was recognized with an article and video of Ella on the front page of the Baltimore Sun!</p>
-        </div>
-      </div>
-      <div class="card shadow my-4">
-        <div class="card-header">
-          <h4 class="card-title text-primary mt-3"> "BUGSS inspires science and technology careers." </h4>
-        </div>
-        <div class="card-body">
-          <p class="card-text">Rachael Avidor, Julius Gingles, and Mercedes Thompson are three students from Baltimore city high schools who participated in BUGSS’ 2016 iGEM team. While these three students had long been interested in science, the
-            iGEM
-            experience was unique in allowing them to take leadership and ownership of a scientific project. Each is continuing to excel on their scientific path, engaging in additional research at Johns Hopkins and the NIH, winning full
-            scholarships
-            to Brown and Johns Hopkins Universities, and founding Baltimore Beyond Plastic. These students will lead the scientific revolution of the next generation!</p>
-        </div>
       </div>
     </div>
     <!--FOOTER Default BG/ACCENT TEXT-->
     <footer class="bg-black border-top mt-3">
+      <!-- Add font awesome icons -->
       <div class="row justify-content-around text-center mt-3">
         <div class="col text-secondary">
           Address: <br>
