kids content update

--- a/html/Kids/AgarArt.html
+++ b/html/Kids/AgarArt.html
@@ -89,13 +89,10 @@
       }
     </style>
 
-    <title>BUGSS Kids and Parents</title>
+    <title>Agar Art</title>
 
   </head>
   <body>
-    <!--TODO: Update Active classes on links if applicable-->
-    <!--TODO: We can decide to use dropdowns or another popup or make them click through.-->
-    <!--NAVBAR-->
     <nav class="navbar navbar-light navbar-expand-lg bg-white">
       <a class="navbar-brand" href="../index.html"><img class="logoNav" src="../../media/bugsslogo-square300.png"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
@@ -144,7 +141,7 @@
 
     <ul class="nav nav-fill nav-pills bg-primary" id="pills-tab">
       <li class="nav-item">
-        <a class="nav-link text-white active rounded-0 shake" id="pills-youth-tab" href="../Kids/Kids_Landing.html">BUGSS Kids Home</a>
+        <a class="nav-link text-white rounded-0 shake" id="pills-youth-tab" href="../Kids/Kids_Landing.html">BUGSS Kids Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-white rounded-0 shake" id="pills-clubs-tab" href="ProgramsForGroups.html">Programs for Clubs and Groups</a>
@@ -153,27 +150,34 @@
         <a class="nav-link text-white rounded-0 shake" id="pills-igem-tab" href="iGEM.html">Baltimore BioCrew iGEM Team</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white rounded-0 shake" id="pills-agar-tab" href="AgarArt.html">Agar Art</a>
+        <a class="nav-link text-white active rounded-0 shake" id="pills-agar-tab" href="AgarArt.html">Agar Art</a>
       </li>
     </ul>
     <div class="container-fluid">
-      <div class="my-2 jumbotron card bg-primary">
 
-        <h2 class="display-4 text-white">Hear From Other BUGSS Kids <br>& Check Out Fun Activites Just For You! </h2>
-
-        <h5 class="text-white">And parents, check out our brochure on how to get invloved</h5>
-        <a class="link-light" href="../../media/BUGSS-educational-brochure.pdf">Click Here For Our Educational Brochure</a>
-      </div>
-
-
-
-      <!--Agar Art TAB-->
-      <div class="tab-pane fade" id="pills-agar" role="tabpanel" aria-labelledby="pills-agar-tab">
-        <h1 class="display-4"> Agar Art </h1>
-        <p class="container-fluid lead">
-          this page is under construction
-        </p>
-
+      <h1 class="display-4"> Agar Art </h1>
+      <div class="row">
+        <div class="col-md-6 mb-3">
+          <img class="img-fluid rounded" src="../../media/IMG_4970-1.jpg">
+        </div>
+        <div class="col mb-3">
+          <p>
+            BUGSS is extremely excited that we get to partner with American Society of Microbiology (ASM) to host Agar Art workshops in 2018! What is Agar Art you ask? It is a perfect marriage of biology and art that everyone and anyone can get into.
+            Come to the BUGSS lab to learn about some special microbes that produce and array of beautiful and striking colors. You will be able to use the tools and guidance provided by BUGSS to create your very own living work of art on agar
+            plates!
+            You may have seen the incredible works of art on petri dishes being shared all over social media? If not just Google image search “Agar Art” and be inspired.
+          </p>
+          <p>
+            Perhaps your art work has what it takes to enter the national ASM contest and win!? Yes, of course it does! There are two contests this year you can enter: AGAR ART MAKER – for 13 years and up, and AGAR ART KIDS 12 years and under.
+          </p>
+          <p>
+            For full contest details (including Terms and Conditions you will need to read over before you submit your work) examples of previous winners. <a href="www.asm.org/agarart">Agar Art Website</a>
+          </p>
+          <p>
+            The next Agar Art contest will be in Spring 2019. Keep an eye on our website and <a href="https://www.eventbrite.com/o/baltimore-under-ground-science-space-4318633291">Eventbrite page</a> for more info!</p>
+          <p>
+            We also offer Agar Art as private classes and workshops-reach out to us at <a href="mailto:info@bugssonline.org">info@bugssonline.org</a>.</p>
+        </div>
       </div>
     </div>
     <!--FOOTER Default BG/ACCENT TEXT-->
