--- a/html/Kids/Kids_Landing.html
+++ b/html/Kids/Kids_Landing.html
@@ -163,7 +163,7 @@
         <h2 class="display-4 text-white">Hear From Other BUGSS Kids <br>& Check Out Fun Activites Just For You! </h2>
 
         <h5 class="text-white">And parents, check out our brochure on how to get invloved</h5>
-        <a class="link-light" href="../../media/BUGSS-educational-brochure.pdf">Click Here For Our Educational Brochure</a>
+        <a class="btn btn-secondary border-white text-white" href="../../media/BUGSS-educational-brochure.pdf">Our Educational Brochure</a>
       </div>
     </div>
 
