broken link hunt

--- a/html/Scientists/Scientists_Landing.html
+++ b/html/Scientists/Scientists_Landing.html
@@ -26,7 +26,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="../../media/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="../../media/favicon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../../media/favicon/favicon-16x16.png">
-    <link rel="manifest" href="media/favicon/manifest.json">
+    <link rel="manifest" href="../../media/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="media/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
@@ -163,7 +163,7 @@
                 BUGSS is a Biosafety Level 1 lab. Anything not listed on our pre-approved list of substances and organisms will need to be approved by our Biosafety officer before being brought into the lab.
                   </p>
 
-                <a href="Scramble_Synthetic_Yeast.html" class="btn btn-primary border-white mt-auto btn-block">More Details</a>
+                <a href="../Projects/Scramble_Synthetic_Yeast.html" class="btn btn-primary border-white mt-auto btn-block">More Details</a>
               </div>
             </div>
           </div>
