more broken links

--- a/html/Kids/AgarArt.html
+++ b/html/Kids/AgarArt.html
@@ -171,7 +171,7 @@
             Perhaps your art work has what it takes to enter the national ASM contest and win!? Yes, of course it does! There are two contests this year you can enter: AGAR ART MAKER – for 13 years and up, and AGAR ART KIDS 12 years and under.
           </p>
           <p>
-            For full contest details (including Terms and Conditions you will need to read over before you submit your work) examples of previous winners. <a href="www.asm.org/agarart">Agar Art Website</a>
+            For full contest details (including Terms and Conditions you will need to read over before you submit your work) examples of previous winners. <a href="https://www.asm.org/agarart">Agar Art Website</a>
           </p>
           <p>
             The next Agar Art contest will be in Spring 2019. Keep an eye on our website and <a href="https://www.eventbrite.com/o/baltimore-under-ground-science-space-4318633291">Eventbrite page</a> for more info!</p>
