more broken links

--- a/html/Kids/ProgramsForGroups.html
+++ b/html/Kids/ProgramsForGroups.html
@@ -244,7 +244,7 @@
               <!--CARD 1-->
               <div class="col-12 col-sm col-lg-6 mb-4">
                 <div class="card shadow border-primary h-100">
-                  <img src="../../media/Boot_Camp.jpg" class="card-img-top" alt="image of DNA">
+                  <img src="../media/Boot_Camp.jpg" class="card-img-top" alt="image of DNA">
 
                   <div class="card-body align-items-start">
                     <h4 class="card-title text-primary">Molecular Biotechnology Boot Camp</h4>
