--- a/html/Projects/Projects_Landing.html
+++ b/html/Projects/Projects_Landing.html
@@ -61,7 +61,7 @@
             <a class="nav-link" href="../Membership/Membership_Landing.html">Membership</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="Projects_Landing_page.html">
+            <a class="nav-link active" href="Projects_Landing.html">
               Group Projects
             </a>
           </li>
