more  more more broken links

--- a/html/Kids/Kids_Landing.html
+++ b/html/Kids/Kids_Landing.html
@@ -205,7 +205,7 @@
           <div class="card border-white shadow h-100">
             <div class="card-header bg-white">
               <h3 class="card-title text-center">For Older Kids</h3>
-              <img class="img-fluid rounded my-1" src="../media/ITuneDeviceSquare.png" alt="Kids working with scientific tools in lab">
+              <img class="img-fluid rounded my-1" src="../../media/ITuneDeviceSquare.png" alt="Kids working with scientific tools in lab">
               <h3 class="card-title text-primary text-center mt-2">iTune Device </h3>
             </div>
             <div class="card-body">
