--- a/web pages/About/Donors_and_Sponsors.html
+++ b/web pages/About/Donors_and_Sponsors.html
@@ -96,13 +96,13 @@
     <div class="container "style="position:center;" >
         <div class="jumbotron bg-primary shadow">
           <div class="lead text-light">
-            <p> We appreciate all of our donors and couldn’t do what we do without the amazing support of our community. Thanks! </p>    
+            <p> We appreciate all of our donors and couldn’t do what we do without the amazing support of our community. Thanks! </p>
           </div>
         </div>
     </div>
 
 
-<div class="container card">
+<div class="container card text-center">
     <br>
     <h2 class="text-center">Pathway Level<br>($10,000 and Above)</h2>
     <hr>
@@ -114,21 +114,21 @@
           <li class="list-group-item">VWR Foundation</li>
         </ul>
       </div>
-      <div class="col d-flex flex-wrap align-items-center">
-        <img src="../../media/PathwayLevel.png" alt="PathwayLevelImage">
+      <div class="col d-flex flex-wrap align-items-center text-center">
+        <img class="img-fluid mx-auto d-block" src="../../media/PathwayLevel.png" alt="PathwayLevelImage">
       </div>
   </div>
 </div>
 
 <br>
 
-<div class="container card">
+<div class="container card text-center">
   <br>
   <h2 class="text-center">Gene Level<br>($1,000 – 10,000)</h2>
   <hr>
   <div class="row">
-    <div class="col d-flex flex-wrap align-items-center">
-      <img src="../../media/GeneLevelLogo.png" alt="PathwayLevelImage">
+    <div class="col d-flex flex-wrap align-items-center text-center">
+      <img class="img-fluid mx-auto d-block" src="../../media/GeneLevelLogo.png" alt="PathwayLevelImage">
     </div>
   <div class="col">
   <ul class="list-group list-group-flush">
@@ -153,7 +153,7 @@
 
 <br>
 
-<div class="container card">
+<div class="container card text-center">
   <br>
   <h2 class="text-center">Promoter Level<br>($100 – 1,000)</h2>
   <hr>
@@ -183,21 +183,21 @@
         <li class="list-group-item">Brad Zynda</li>
       </ul>
   </div>
-  <div class="col d-flex flex-wrap align-items-center">
-    <img src="../../media/Promotor Level.png" alt="">
+  <div class="col d-flex flex-wrap align-items-center text-center">
+    <img class="img-fluid mx-auto d-block" src="../../media/Promotor Level.png" alt="Image of a cellular promotion sequence ">
   </div>
 </div>
 </div>
 
 <br>
 
-<div class="container card">
+<div class="container card text-center">
   <br>
   <h2 class="text-center">Nucleotide Level<br>(Up to $100)</h2>
   <hr>
   <div class="row">
-    <div class="col d-flex flex-wrap align-items-center">
-      <img src="../../media/NucleotideLevel.png" alt="">
+    <div class="col d-flex flex-wrap align-items-center text-center">
+      <img class=" img-fluid mx-auto d-block" src="../../media/NucleotideLevel.png" alt="Nucleoitide image">
     </div>
     <div class="col">
       <ul class="list-group list-group-flush">
@@ -224,11 +224,11 @@
 
 <br>
 
-<div class="container card">
+<div class="container card text-center">
   <br>
   <h2 class="text-center">Nucleic Acid Level<br>(In-kind donations)</h2>
   <hr>
-  <div class="row">
+  <div class="row text-center">
     <div class="col">
       <ul class="list-group list-group-flush">
         <li class="list-group-item">Genessee Scientific, Inc.</li>
@@ -240,8 +240,8 @@
         <li class="list-group-item">USA Scientific, Inc.</li>
       </ul>
     </div>
-  <div class="col d-flex flex-wrap align-items-center">
-    <img src="../../media/NucleicAcidLevel.jpg" alt="">
+  <div class="col d-flex flex-wrap align-items-center text-center">
+    <img class="img-fluid mx-auto d-block" src="../../media/NucleicAcidLevel.jpg" alt="Picture of a nucleic acid">
   </div>
 </div>
 </div>
