alternate text bugs logo

--- a/alternateNav.html
+++ b/alternateNav.html
@@ -43,7 +43,7 @@
     <!--NAVBAR-->
     <div class="d-flex flex-row bg-white">
       <div class="ml-3 mt-2">
-        <a class="navbar-brand" href="#"><img class="logoNav" src="media/bugsslogo-square300.png"></a>
+        <a class="navbar-brand" href="#"><img class="logoNav" src="media/bugsslogo-square300.png" alt="BUGSS Logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
