--- a/html/Kids/AgarArt.html
+++ b/html/Kids/AgarArt.html
@@ -94,7 +94,7 @@
   </head>
   <body>
     <nav class="navbar navbar-light navbar-expand-lg bg-white">
-      <a class="navbar-brand" href="../index.html"><img class="logoNav" src="../../media/bugsslogo-square300.png"></a>
+      <a class="navbar-brand" href="../index.html"><img class="logoNav" src="../../media/bugsslogo-square300.png" alt="BUGSS Logo"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
