--- a/html/Kids/iGEM.html
+++ b/html/Kids/iGEM.html
@@ -97,7 +97,7 @@
     <!--TODO: We can decide to use dropdowns or another popup or make them click through.-->
     <!--NAVBAR-->
     <nav class="navbar navbar-light navbar-expand-lg bg-white">
-      <a class="navbar-brand" href="../index.html"><img class="logoNav" src="../../media/bugsslogo-square300.png"></a>
+      <a class="navbar-brand" href="../index.html"><img class="logoNav" src="../../media/bugsslogo-square300.png" alt="BUGSS Logo"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -156,7 +156,7 @@
         <a class="nav-link text-white rounded-0 shake" id="pills-agar-tab" href="AgarArt.html">Agar Art</a>
       </li>
     </ul>
-  
+
 
     <div class="container-fluid bg-white" >
   <ul class="nav justify-content-around" id="pills-tab-1" role="tablist" style=".active{color:#7a56e9}">
